# exim-geoipv6-dlfunc

./: README.md  configure.ac  exim-geoipv6-dlfunc.c
